--- a/LatestGists/AndroidManifest.xml
+++ b/LatestGists/AndroidManifest.xml
@@ -4,10 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission 
+        android:name="android.permission.ACCESS_NETWORK_STATE"
+        android:maxSdkVersion="19" />
+    
+    <uses-permission 
+        android:name="android.permission.INTERNET"
+        android:maxSdkVersion="19" />
+    
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
-
+        android:targetSdkVersion="19" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +30,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.coolmodev.latestgists.FilesListActivity" />
+        
+        <activity
+            android:name="com.coolmodev.latestgists.DetailActivity" />
+        
     </application>
 
 </manifest>
